--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ### CONFIGURAÇÕES ###
 app.dir.logger = .\\src\\main\\resources\\archive\\
-app.dir.teste = C:\\Users\\Ícaro Silva\\Desktop\\teste.txt
+app.dir.teste = C:\\Users\\Ícaro Silva\\Desktop\\
 
 ##### ACESSO STAR ####
 app.star.url = https://aclauthhml.enterprisetrn.corp:8202/security/UI/Login?realm=/corporativo/STAR&goto=http://starhml.enterprisetrn.corp.web/j_spring_security_check
