Atualizações para banco de dados.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,13 @@
 app.dir.logger = .\\src\\main\\resources\\logger\\
 app.dir.files = .\\src\\main\\resources\\files\\
 
-##### ACESSO STAR ####
+#### ACESSO STAR ####
 app.star.url = https://aclauthhml.enterprisetrn.corp:8202/security/UI/Login?realm=/corporativo/STAR&goto=http://starhml.enterprisetrn.corp.web/j_spring_security_check
 app.star.usuario = t2609crd
 app.star.senha = C!elo_1234
 
+##### DAO MYSQL #####
+app.dao.driver = com.mysql.cj.jdbc.Driver
+app.dao.connection = jdbc:mysql://localhost:3306/uptime_logger?useTimezone=true&serverTimezone=UTC
+app.dao.user = root
+app.dao.pass = 1234
