--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 app.dir.logger = .\\src\\main\\resources\\logger\\
 app.dir.files = .\\src\\main\\resources\\files\\
 
-#### ACESSO STAR ####
+#### ACESSO ZEUS ####
 app.star.url = https://aclauthhml.enterprisetrn.corp:8202/security/UI/Login?realm=/corporativo/STAR&goto=http://starhml.enterprisetrn.corp.web/j_spring_security_check
 app.star.usuario = t2609crd
 app.star.senha = C!elo_1234
