atualização design patterns

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 ### CONFIGURAÇÕES ###
 app.dir.logger = .\\src\\main\\resources\\logger\\
 app.dir.files = .\\src\\main\\resources\\files\\
+app.browser.driver = chrome
 
 #### ACESSO ZEUS ####
 app.star.url = https://aclauthhml.enterprisetrn.corp:8202/security/UI/Login?realm=/corporativo/STAR&goto=http://starhml.enterprisetrn.corp.web/j_spring_security_check
